# ProcessesQtApp

./: .clang-format  CMakeLists.txt  README.md  main.cpp
Src/: CMakeLists.txt
Src/Controller/: CMakeLists.txt  ProcessesController.cpp  ProcessesController.h
Src/Model/: CMakeLists.txt  IProcessesModel.h
Src/Model/AddRemoveProcsStruct/: AddRemoveProcsStruct.h  CMakeLists.txt
Src/Model/ModelFactory/: CMakeLists.txt  ModelFactory.cpp  ModelFactory.h
Src/Model/ProcessesDiff/: CMakeLists.txt  ProcessesDiff.cpp  ProcessesDiff.h
Src/Model/ProcessesFilter/: CMakeLists.txt  CommandProcessesFilter.cpp  CommandProcessesFilter.h  ProcessesFilter.h
Src/Model/ProcessesInfo/: CMakeLists.txt  ProcessInfo.cpp  ProcessInfo.h
Src/Model/Unix/: CMakeLists.txt  UnixProcessesModel.cpp  UnixProcessesModel.h
Src/View/: CMakeLists.txt  IProcessesView.h
Src/View/Qt/: CMakeLists.txt  QtCustomWindow.cpp  QtProcessesView.cpp  QtProcessesView.h  QtProcessesWidget.cpp  QtProcessesWidget.h
Testing/: CMakeLists.txt
Testing/Mocks/: CMakeLists.txt  ProcessesModelMock.cpp
Testing/Unit/: CMakeLists.txt  ProcessesControllerTest.cpp  ProcessesDiffTest.cpp  ProcessesFilterTest.cpp
